--- a/index.html
+++ b/index.html
@@ -256,21 +256,21 @@ footer a {
     color: #3c97bf;
     text-decoration: none;
 }
-p{
-    animation: 6s li linear infinite;
+h3{
+    animation: 4s li linear infinite;
 }
 @keyframes li{
     0%{
     transform: scale(1);
     }
     100%{
-        transform: scale(1.1);
+        transform: scale(1.7);
     }
 }
     </style>
 </head>
 <body>
-    <p style="color: white;font-size: 30px;text-align: center;font-weight: bold;">WELCOME! TO SOCIAL MEDIA</p>
+    <h3 style="color: white;font-size: 30px;text-align: center;font-weight: bold;">WELCOME! TO SOCIAL MEDIA</h3>
     <div class="container" id="container">
         <div class="form-container sign-up-container">
             <form action="#">
