--- a/login.html
+++ b/login.html
@@ -81,8 +81,8 @@
 </head>
 
 <body style="background-image: url(./u.jpg);" class="b">
-    <h1 style="color:white;font-size:20px">Don't have an account?</h1>
-    <a href="./index.html" style="color: white;font-size: 20px;background-color: tomato;padding: 10px;text-decoration: none;">GO BACK FOR SIGNUP
+    
+    <a href="./index.html" style="color: white;font-size: 20px;background-color: tomato;padding: 10px;text-decoration: none;"> BACK 
 
  </a>
     <h1  style="color: rgb(255, 255, 255);font-weight: bold;font-family: 'Times New Roman', Times, serif;text-align: center;font-size: 60px;">Please Fill Your Credentials!</h1>
