--- a/login.html
+++ b/login.html
@@ -82,9 +82,8 @@
 
 <body style="background-image: url(./u.jpg);" class="b">
     
-    <a href="./index.html" style="color: white;font-size: 20px;background-color: tomato;padding: 10px;text-decoration: none;"> BACK 
-
- </a>
+    <p style="color: white;font-size: 20px;">Dont't have an account?</p>
+    <a href="./index.html" style="color: white;font-size: 20px;background-color: tomato;padding: 10px;text-decoration: none;"> GO BACK FOR SIGNUP</a>
     <h1  style="color: rgb(255, 255, 255);font-weight: bold;font-family: 'Times New Roman', Times, serif;text-align: center;font-size: 60px;">Please Fill Your Credentials!</h1>
     <div class="login">
         <label for="usern"><b><span style="border:2px solid black;padding:2px;background-color:rgb(241, 227, 227);color:black ;border-radius:5px ">USERNAME</span>  : </b></label>
